objects/Contact_Role__c.object
<CustomObject>
    <description>TOOLKIT: Used to connect a Contact to their Assigned Role for a particular Item. Can currently be assigned at the Project / Release Level, the Capability Level, and the Requirement Level</description>
    <fields>
        <fullName>Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates a Contact to a Role for either a Release, a Capability, or a Request</description>
        <inlineHelpText>Associates a Contact to a Role for either a Release, a Capability, or a Request</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Item__c</fullName>
        <formula>IF ( CONTAINS(  RecordType.DeveloperName, &quot;Release&quot;), 
 HYPERLINK( Release__c ,   Release__r.Name   , &quot;_self&quot;) 
,


IF ( CONTAINS(  RecordType.DeveloperName, &quot;Capability&quot;), 
 HYPERLINK(  Capability__c ,  Capability__r.Name, &quot;_self&quot;) 
, 


IF ( CONTAINS(  RecordType.DeveloperName, &quot;Request&quot;), 
 HYPERLINK( Request__c ,    Request__r.Name   , &quot;_self&quot;) 
,
&quot;none&quot;

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Details__c</fullName>
        <formula>Role_Responsibility__r.Definition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Responsibility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connects a Contact to their assigned Role as it relates to a Release, Capability, or Request</description>
        <inlineHelpText>Connects a Contact to their assigned Role as it relates to a Release, Capability, or Request</inlineHelpText>
        <label>Role &amp; Responsibility</label>
        <referenceTo>Glossary_Item__c</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Role</label>
    <nameField>
        <displayFormat>ConR-{00000000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Roles</pluralLabel>
    <recordTypes>
        <fullName>Capability_Role</fullName>
        <active>true</active>
        <description>Assigns a Contact a Role on a Capability</description>
        <label>Capability Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>Release_Role</fullName>
        <active>true</active>
        <description>Assigns a Contact a Role on a Request</description>
        <label>Release Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request_Role</fullName>
        <active>true</active>
        <description>Assigns a Contact a Role on a Request</description>
        <label>Request Role</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>